Fix cvv spacing

--- a/css/forms.scss
+++ b/css/forms.scss
@@ -90,6 +90,7 @@ html.full-background {
 		text-align: center;
 		img {
 			width: 60px;
+			height: 37px;
 			margin: 0 5px 10px 5px;
 		}
 	}	
@@ -138,7 +139,7 @@ html.full-background {
 			position: absolute;
 		}
 		input[type="checkbox"] ~ label { 
-			padding-left: 1.5rem;
+			padding-left: 1.6rem;
 			font-size: 0.9rem;
 			vertical-align: top;
 			display:inline-block;
